fix(css): zoom breaking the tasks scroll and body scrollbar

--- a/styles.css
+++ b/styles.css
@@ -178,7 +178,7 @@ form {
 
 .content {
   width: 100%;
-  max-height: 50vh;
+  max-height: 200px;
   display: flex;
   flex-direction: column;
   gap: 40px;
